# fdtools

./: .gitignore  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.dev  Makefile.in  README.md  annotated.html  annotated_dup.js  array_8h.html  array_8h.js  bootstrap  bpb_8h.html  bpb_8h.js  bpbex_8h.html  bpbex_8h.js  bytes_8h.html  bytes_8h.js  check  classes.html  config.h  config.h.in  config_8h.html  config_8h.js  configure  configure.ac  cpm_8h.html  cpm_8h.js  d88_8h.html  d88_8h.js  density_8h.html  density_8h.js  dev_2error_8h.html  dev_2error_8h.js  dev_2image_8h.html  dev_2image_8h.js  device_8h.html  device_8h.js  dictionary_8h.html  (+188 more)
.github/workflows/: make.yml
doc/: fdcopy.md  fdinfo.md  fdutils.md  ffdump.md  hfe_format_spec.md
doc/specs/fmt/: cpm-fmt-spec.md  ms-dos-fmt-spec.md  x1-fmt-spec.md
doc/specs/img/: d88-img-spec.md  dsk-img-spec.md  fdx-img-spec.md  hfe-img-spec.md  x68-img-spec.md
include/: Makefile.am  Makefile.am.build  Makefile.in
include/fdtools/: error.h  typedef.h
include/fdtools/bios/: bios.h
include/fdtools/dev/: device.h  error.h  floppy.h  image.h
include/fdtools/fmt/: error.h  file.h  format.h
include/fdtools/format/: d88.h  header.h  hfe.h
include/fdtools/image/: file.h
include/fdtools/img/: config.h  d88.h  density.h  error.h  fdx.h  file.h  header.h  hfe.h  image.h  plugin.h  raw.h  sector.h
include/fdtools/plugins/: format.h  image.h  plugin.h
include/fdtools/util/: arguments.h  array.h  bytes.h  dictionary.h  file.h  hexdump.h  list.h  log.h  logic.h  program.h  string.h  struct.h
lib/: Makefile.am  Makefile.in
lib/macosx/xcode/libfdtools.xcodeproj/: project.pbxproj
lib/unix/: Makefile.am  Makefile.am.build  Makefile.in
snap/: snapcraft.yaml
src/fdtools/: dummy.c  error.cpp
src/fdtools/bios/: bios_posix.c
src/fdtools/dev/: device.cpp  device_linux.cpp  device_posix.cpp  device_unix.cpp  floppy.cpp  floppy_linux.cpp  image.cpp
src/fdtools/fmt/: file.cpp  files.cpp  format.cpp
src/fdtools/image/: file.c
src/fdtools/img/: config.c  config.cpp  d88.cpp  d88_exporter.cpp  d88_loader.cpp  density.cpp  file.c  file.cpp  func.cpp  function.cpp  header.c  header.cpp  hfe.cpp  hfe_loader.cpp  image.cpp  plugin.cpp  plugins.cpp  raw.cpp  raw_exporter.cpp  raw_loader.cpp  sector.cpp  sectors.cpp
src/fdtools/plugins/: func.cpp  loader.cpp  loader.h  plugin.cpp  plugin.h  plugins.cpp
src/fdtools/plugins/d88/: d88.cpp  d88.h  d88_exporter.cpp  d88_loader.cpp
src/fdtools/plugins/fmt/: loader.cpp  loader.h  plugin.cpp  plugin.h  plugins.cpp
src/fdtools/plugins/fmt/cpm/: cpm.cpp  cpm.h  directory.cpp  error.h
src/fdtools/plugins/fmt/dos/: bpb.cpp  bpb.h  bpb_ex.cpp  bpbex.cpp  bpbex.h  dos.cpp  dos.h  error.h  fat.cpp  fat.h  func.cpp  sector.cpp  sector.h  x68.cpp  x68.h
src/fdtools/plugins/fmt/x68/: x68.cpp  x68.h  x68_img.cpp
src/fdtools/plugins/hfe/: hfe.cpp  hfe.h  hfe_exporter.cpp  hfe_loader.cpp
src/fdtools/plugins/img/: func.cpp  loader.cpp  loader.h  plugin.cpp  plugin.h  plugins.cpp
src/fdtools/plugins/img/d88/: d88.cpp  d88.h  d88_exporter.cpp  d88_loader.cpp
src/fdtools/plugins/img/hfe/: hfe.cpp  hfe.h  hfe_exporter.cpp  hfe_loader.cpp
src/fdtools/plugins/img/raw/: raw.cpp  raw.h  raw_exporter.cpp  raw_loader.cpp
src/fdtools/plugins/raw/: raw.cpp  raw.h  raw_exporter.cpp  raw_loader.cpp
src/fdtools/util/: argument.cpp  argument_option.cpp  arguments.cpp  bytes.cpp  bytes_le.cpp  dictionary.cpp  dictionary_elem.cpp  element.cpp  file.cpp  hexdump.cpp  hexdump_diff.cpp  list.cpp  log.cpp  option.cpp  program.cpp  program_arguments.cpp  program_option.cpp  string.cpp  string_func.cpp  strings.cpp  struct.cpp
test/: Makefile.in  arguments_test.cpp  bytes_test.cpp  config_test.cpp  d88_test.cpp  dev_device_test.cpp  dev_floppy_test.cpp  device_floppy_params_test.cpp  device_floppy_test.cpp  device_test.cpp  dictionary_test.cpp  dos_test.cpp  error_test.cpp  fdtools_test.cpp  format_dos_test.cpp  format_plugin_test.cpp  format_test.cpp  format_x68_test.cpp  hfe_test.cpp  image_d88_test.cpp  image_file_test.cpp  image_hfe_test.cpp  image_plugin_test.cpp  image_raw_test.cpp  image_test.cpp  image_test.h  image_test_func.cpp  img_d88_test.cpp  img_file_test.cpp  img_hfe_test.cpp  img_test.cpp  list_test.cpp  logic_test.cpp  main.cpp  program_test.cpp  raw_test.cpp  sector_test.cpp  string_test.cpp  x68_test.cpp
test/helper/: image.cpp  image.h
test/img/: 35-2hd-msdos.d88  35-2hd-msdos.hfe  35-2hd-msdos.raw  525-2dd-cpm.d88  525-2dd-cpm.fdx  525-2dd-cpm.hfe  525-2dd-cpm.raw  Makefile  Makefile.bat
test/img/dos/: msdos-35-2hd-ubuntu.img  msdos-35-2hd-win10.img
test/macosx/xcode/fdtoolstest.xcodeproj/: project.pbxproj
test/unix/: Makefile.am  Makefile.am.build  Makefile.in
