# Copyright (C) 2020 Satoshi Konno. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

fdtoolsheaders = \
	./fdtools/typedef.h \
	./fdtools/error.h \
	./fdtools/dev/device.h \
	./fdtools/dev/floppy.h \
	./fdtools/dev/image.h \
	./fdtools/util/list.h \
	./fdtools/util/dictionary.h \
	./fdtools/util/hexdump.h \
	./fdtools/util/array.h \
	./fdtools/util/program.h \
	./fdtools/util/file.h \
	./fdtools/util/string.h \
	./fdtools/util/logic.h \
	./fdtools/util/struct.h \
	./fdtools/img/sector.h \
	./fdtools/img/config.h \
	./fdtools/img/error.h \
	./fdtools/img/fdx.h \
	./fdtools/img/density.h \
	./fdtools/img/raw.h \
	./fdtools/img/file.h \
	./fdtools/img/hfe.h \
	./fdtools/img/image.h \
	./fdtools/img/d88.h

nobase_include_HEADERS = \
	$(fdtoolsheaders)
